[project]
name = "comfyui-uit-hidream-o1"
description = "ComfyUI custom node — UIT Sampler for HiDream-O1-Image"
version = "0.1.2"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/easygoing0114/ComfyUI-uit-hidream-o1"

[tool.comfy]
PublisherId = "easygoing0114"
DisplayName = "UIT Sampler HiDream-O1"
Icon = "https://raw.githubusercontent.com/easygoing0114/ComfyUI-uit-hidream-o1/main/images/ComfyUI-uit-hidream-o1_icon_400.webp"
Banner = "https://raw.githubusercontent.com/easygoing0114/ComfyUI-uit-hidream-o1/main/images/ComfyUI-uit-hidream-o1_banner_21_9.png"
